Fix for overflow for long tables

--- a/static/plugin_instant_admin/stylesheets/w2p.admin.css
+++ b/static/plugin_instant_admin/stylesheets/w2p.admin.css
@@ -74,3 +74,7 @@ input#search {
     overflow: auto;
     font-size: 13px;
 }
+
+.inner {
+    overflow-x: auto;
+}
